--- a/apphere/Base.lproj/Main.storyboard
+++ b/apphere/Base.lproj/Main.storyboard
@@ -430,7 +430,7 @@ Developer: Derek Sheldon</string>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="p0n-iP-3Ch">
-                                <rect key="frame" x="10" y="20" width="355" height="598"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="20" minimumInteritemSpacing="10" sectionInsetReference="safeArea" id="ov9-Oj-hqU">
                                     <size key="itemSize" width="300" height="344"/>
@@ -440,7 +440,7 @@ Developer: Derek Sheldon</string>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="event" id="tuY-EE-hgc" userLabel="Event" customClass="EventCell" customModule="apphere" customModuleProvider="target">
-                                        <rect key="frame" x="27.5" y="50" width="300" height="344"/>
+                                        <rect key="frame" x="37.5" y="50" width="300" height="344"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                             <rect key="frame" x="0.0" y="0.0" width="300" height="344"/>
@@ -513,20 +513,20 @@ Developer: Derek Sheldon</string>
                                     </collectionViewCell>
                                 </cells>
                                 <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="header" id="t7d-uA-trr" customClass="HeaderView" customModule="apphere" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="0.0" width="355" height="50"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" text="DECEMBER 19" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SB7-ab-1tK">
-                                            <rect key="frame" x="0.0" y="0.0" width="355" height="50"/>
+                                            <rect key="frame" x="10" y="0.0" width="355" height="50"/>
                                             <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="24"/>
                                             <color key="textColor" red="0.50716221332550049" green="0.34449067711830139" blue="0.89811784029006958" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="trailing" secondItem="SB7-ab-1tK" secondAttribute="trailing" id="4JY-WD-kI5"/>
+                                        <constraint firstAttribute="trailing" secondItem="SB7-ab-1tK" secondAttribute="trailing" constant="10" id="4JY-WD-kI5"/>
                                         <constraint firstItem="SB7-ab-1tK" firstAttribute="top" secondItem="t7d-uA-trr" secondAttribute="top" id="Wv2-ss-QGP"/>
-                                        <constraint firstItem="SB7-ab-1tK" firstAttribute="leading" secondItem="t7d-uA-trr" secondAttribute="leading" id="bo3-i4-9Mq"/>
+                                        <constraint firstItem="SB7-ab-1tK" firstAttribute="leading" secondItem="t7d-uA-trr" secondAttribute="leading" constant="10" id="bo3-i4-9Mq"/>
                                         <constraint firstAttribute="bottom" secondItem="SB7-ab-1tK" secondAttribute="bottom" id="gRa-bz-EAs"/>
                                     </constraints>
                                     <connections>
@@ -539,11 +539,11 @@ Developer: Derek Sheldon</string>
                                 </connections>
                             </collectionView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.53476089240000002" green="0.33745265009999997" blue="0.93111383910000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="c8w-zz-5kT" firstAttribute="trailing" secondItem="p0n-iP-3Ch" secondAttribute="trailing" constant="10" id="9Oc-gX-0NI"/>
+                            <constraint firstItem="c8w-zz-5kT" firstAttribute="trailing" secondItem="p0n-iP-3Ch" secondAttribute="trailing" id="9Oc-gX-0NI"/>
                             <constraint firstItem="p0n-iP-3Ch" firstAttribute="top" secondItem="c8w-zz-5kT" secondAttribute="top" id="ZZE-Mm-OZC"/>
-                            <constraint firstItem="p0n-iP-3Ch" firstAttribute="leading" secondItem="c8w-zz-5kT" secondAttribute="leading" constant="10" id="jyZ-Ud-VvX"/>
+                            <constraint firstItem="p0n-iP-3Ch" firstAttribute="leading" secondItem="c8w-zz-5kT" secondAttribute="leading" id="jyZ-Ud-VvX"/>
                             <constraint firstItem="c8w-zz-5kT" firstAttribute="bottom" secondItem="p0n-iP-3Ch" secondAttribute="bottom" id="mzw-Kj-eXk"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="c8w-zz-5kT"/>
