--- a/apphere/Base.lproj/Main.storyboard
+++ b/apphere/Base.lproj/Main.storyboard
@@ -22,8 +22,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="Cs7-0c-Lg1">
-                                <rect key="frame" x="20" y="36" width="335" height="125"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="Cs7-0c-Lg1">
+                                <rect key="frame" x="20" y="50" width="335" height="125"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="335" id="A3s-i7-m7U"/>
                                     <constraint firstAttribute="height" constant="125" id="Nzx-LK-vdU"/>
@@ -66,7 +66,7 @@ Developer: Derek Sheldon</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1725.5999999999999" y="-1.3493253373313345"/>
+            <point key="canvasLocation" x="298" y="-457"/>
         </scene>
         <!--Map View Controller-->
         <scene sceneID="7Mr-KD-nN1">
@@ -96,7 +96,7 @@ Developer: Derek Sheldon</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BOz-p6-gyx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="425" y="-22"/>
+            <point key="canvasLocation" x="1151" y="99"/>
         </scene>
         <!--locations-->
         <scene sceneID="wg7-f3-ORb">
@@ -136,7 +136,7 @@ Developer: Derek Sheldon</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1078" y="0.0"/>
+            <point key="canvasLocation" x="1070" y="846"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
@@ -148,7 +148,7 @@ Developer: Derek Sheldon</string>
                         <color key="selectedImageTintColor" red="0.55228072399999995" green="0.30080810190000001" blue="0.75106769799999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBar>
                     <connections>
-                        <segue destination="La9-D8-5uU" kind="relationship" relationship="viewControllers" id="bit-Dz-9z5"/>
+                        <segue destination="qCQ-Fw-mOb" kind="relationship" relationship="viewControllers" id="bit-Dz-9z5"/>
                         <segue destination="4Wi-Pg-A2U" kind="relationship" relationship="viewControllers" id="BpN-cY-Qf9"/>
                         <segue destination="8rJ-Kc-sve" kind="relationship" relationship="viewControllers" id="mAf-bj-qkN"/>
                         <segue destination="9pv-A4-QxB" kind="relationship" relationship="viewControllers" id="q5f-iR-6XW"/>
@@ -167,7 +167,7 @@ Developer: Derek Sheldon</string>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="p0n-iP-3Ch">
-                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="20" minimumInteritemSpacing="10" sectionInsetReference="safeArea" id="ov9-Oj-hqU">
                                     <size key="itemSize" width="300" height="344"/>
@@ -246,6 +246,7 @@ Developer: Derek Sheldon</string>
                                             <outlet property="nameLabel" destination="Cyu-Tu-CXS" id="YuF-gP-hjo"/>
                                             <outlet property="photoView" destination="1aF-x4-tG4" id="T6v-he-v0o"/>
                                             <outlet property="promotionLabel" destination="bN4-Og-biA" id="RK6-py-pdV"/>
+                                            <segue destination="gcm-cc-Ct0" kind="show" identifier="business" id="qUY-RT-uH7"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -290,7 +291,7 @@ Developer: Derek Sheldon</string>
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </view>
-                    <tabBarItem key="tabBarItem" systemItem="featured" id="Q4s-t2-iMC"/>
+                    <navigationItem key="navigationItem" id="Dai-vE-6wW"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="Image.layer.cornerRadius">
                             <integer key="value" value="8"/>
@@ -311,7 +312,57 @@ Developer: Derek Sheldon</string>
                     </connections>
                 </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="209" y="923"/>
+            <point key="canvasLocation" x="-1001" y="1051"/>
+        </scene>
+        <!--Business-->
+        <scene sceneID="Eu3-25-2j8">
+            <objects>
+                <viewController id="gcm-cc-Ct0" customClass="BusinessViewController" customModule="apphere" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="OmI-1S-9g8">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="usv-VJ-bwq">
+                                <rect key="frame" x="166" y="330.5" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="usv-VJ-bwq" firstAttribute="centerY" secondItem="Fpy-mn-DcO" secondAttribute="centerY" id="apB-vw-gGo"/>
+                            <constraint firstItem="usv-VJ-bwq" firstAttribute="centerX" secondItem="Fpy-mn-DcO" secondAttribute="centerX" id="bky-VB-VVu"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Fpy-mn-DcO"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Business" id="bZt-vg-cP0"/>
+                    <connections>
+                        <outlet property="nameLabel" destination="usv-VJ-bwq" id="rbf-AR-cgl"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="41Y-yJ-6g4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-156" y="1051"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="CT5-fn-7Mu">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="qCQ-Fw-mOb" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="featured" id="Q4s-t2-iMC"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="REs-gS-vcM">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="La9-D8-5uU" kind="relationship" relationship="rootViewController" id="o9U-d4-ilN"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VgU-BU-Cej" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1831" y="1052"/>
         </scene>
     </scenes>
     <resources>
