--- a/apphere/Base.lproj/Main.storyboard
+++ b/apphere/Base.lproj/Main.storyboard
@@ -148,7 +148,7 @@ Developer: Derek Sheldon</string>
                         <color key="selectedImageTintColor" red="0.55228072399999995" green="0.30080810190000001" blue="0.75106769799999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBar>
                     <connections>
-                        <segue destination="qCQ-Fw-mOb" kind="relationship" relationship="viewControllers" id="bit-Dz-9z5"/>
+                        <segue destination="La9-D8-5uU" kind="relationship" relationship="viewControllers" id="z9j-ff-vQD"/>
                         <segue destination="4Wi-Pg-A2U" kind="relationship" relationship="viewControllers" id="BpN-cY-Qf9"/>
                         <segue destination="8rJ-Kc-sve" kind="relationship" relationship="viewControllers" id="mAf-bj-qkN"/>
                         <segue destination="9pv-A4-QxB" kind="relationship" relationship="viewControllers" id="q5f-iR-6XW"/>
@@ -161,13 +161,13 @@ Developer: Derek Sheldon</string>
         <!--Home View Controller-->
         <scene sceneID="FYs-ts-ggw">
             <objects>
-                <viewController id="La9-D8-5uU" customClass="HomeViewController" customModule="apphere" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="La9-D8-5uU" userLabel="Home View Controller" customClass="HomeViewController" customModule="apphere" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="LTk-w2-tFT">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="p0n-iP-3Ch">
-                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="20" minimumInteritemSpacing="10" sectionInsetReference="safeArea" id="ov9-Oj-hqU">
                                     <size key="itemSize" width="300" height="344"/>
@@ -241,7 +241,7 @@ Developer: Derek Sheldon</string>
                                             <outlet property="nameLabel" destination="Cyu-Tu-CXS" id="YuF-gP-hjo"/>
                                             <outlet property="photoView" destination="1aF-x4-tG4" id="T6v-he-v0o"/>
                                             <outlet property="promotionLabel" destination="bN4-Og-biA" id="RK6-py-pdV"/>
-                                            <segue destination="gcm-cc-Ct0" kind="show" identifier="business" id="qUY-RT-uH7"/>
+                                            <segue destination="gcm-cc-Ct0" kind="presentation" identifier="business" id="qUY-RT-uH7"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -281,6 +281,7 @@ Developer: Derek Sheldon</string>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="c8w-zz-5kT"/>
                     </view>
+                    <tabBarItem key="tabBarItem" systemItem="featured" id="UBn-9G-Zs9"/>
                     <navigationItem key="navigationItem" id="Dai-vE-6wW"/>
                     <connections>
                         <outlet property="collectionView" destination="p0n-iP-3Ch" id="VWw-kY-toO"/>
@@ -297,18 +298,29 @@ Developer: Derek Sheldon</string>
                     </connections>
                 </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="-1001" y="1051"/>
+            <point key="canvasLocation" x="-1081" y="787"/>
         </scene>
         <!--Business-->
         <scene sceneID="Eu3-25-2j8">
             <objects>
                 <viewController id="gcm-cc-Ct0" customClass="BusinessViewController" customModule="apphere" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="OmI-1S-9g8">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8o7-eQ-Hs9">
+                                <rect key="frame" x="331" y="20" width="44" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="8d5-ZM-CIF"/>
+                                    <constraint firstAttribute="width" constant="44" id="OED-3U-ily"/>
+                                </constraints>
+                                <state key="normal" title="X"/>
+                                <connections>
+                                    <action selector="closeButtonTapped" destination="gcm-cc-Ct0" eventType="touchUpInside" id="Ns7-jR-VVL"/>
+                                </connections>
+                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="usv-VJ-bwq">
-                                <rect key="frame" x="166" y="330.5" width="42" height="21"/>
+                                <rect key="frame" x="166" y="333" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -316,8 +328,10 @@ Developer: Derek Sheldon</string>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="8o7-eQ-Hs9" firstAttribute="top" secondItem="Fpy-mn-DcO" secondAttribute="top" id="Jjb-WY-63a"/>
                             <constraint firstItem="usv-VJ-bwq" firstAttribute="centerY" secondItem="Fpy-mn-DcO" secondAttribute="centerY" id="apB-vw-gGo"/>
                             <constraint firstItem="usv-VJ-bwq" firstAttribute="centerX" secondItem="Fpy-mn-DcO" secondAttribute="centerX" id="bky-VB-VVu"/>
+                            <constraint firstItem="Fpy-mn-DcO" firstAttribute="trailing" secondItem="8o7-eQ-Hs9" secondAttribute="trailing" id="zym-yO-72r"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Fpy-mn-DcO"/>
                     </view>
@@ -328,26 +342,7 @@ Developer: Derek Sheldon</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="41Y-yJ-6g4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-156" y="1051"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="CT5-fn-7Mu">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="qCQ-Fw-mOb" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" systemItem="featured" id="Q4s-t2-iMC"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="REs-gS-vcM">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="La9-D8-5uU" kind="relationship" relationship="rootViewController" id="o9U-d4-ilN"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="VgU-BU-Cej" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1831" y="1052"/>
+            <point key="canvasLocation" x="-151" y="787"/>
         </scene>
     </scenes>
     <resources>
